--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "serve:api": "json-server --watch serveur/data.json --port 3000",
-    "test": "vitest"
+    "test": "vitest",
+    "test:e2e": "playwright test tests/e2e"  
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@playwright/test": "^1.53.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
